[tool.poetry]
name = "wistia-parser"
version = "0.1.0"
description = ""
authors = ["Junwoo Hwang <zzulu.hwang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
selenium = "^4.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
